Fix spacing in .albums in bp600

--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -1,11 +1,20 @@
 .main {
   grid-column: content-start / content-end;
+  // this is the height of the first two rows in .albums template-rows
   padding-bottom: 110vh;
   margin-bottom: -110vh;
+
+  // offset top to include everything to the "About Us" navbar section
+  // it's the height of the first row in the .container template-rows
   padding-top: 80vh;
   margin-top: -80vh;
 
   @include responsive(bp1200) {
     grid-column: full-start / full-end;
+  }
+
+  @include responsive(bp600) {
+    padding-bottom: 90vh;
+    margin-bottom: -90vh;
   }
 }
